--- a/style/css/globals.css
+++ b/style/css/globals.css
@@ -1,8 +1,12 @@
 @import 'tailwindcss';
-@plugin './hero.ts';
+@plugin '../../app/hero.ts';
 /* Note: You may need to change the path to fit your project structure */
-@source '../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
+@source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
 @custom-variant dark (&:is(.dark *));
+/* iconify */
+@plugin "@iconify/tailwind4";
+/* daisy ui */
+@plugin "daisyui";
 
 :root {
 	--background: #ffffff;
